--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   percent_indicator: ^4.2.3
 
   flutter_rating_bar: ^4.0.1
+  dropdown_button2: ^2.0.0
 
 dev_dependencies:
   flutter_test:
